--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "filament/filament": "~4.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "pxlrbt/filament-excel": "3.0",
+        "swisnl/filament-backgrounds": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
